@@ -1,3 +1,8 @@
+2018-10-13  Markus Gans  <guru.mail@muenster.de>
+	* Avoid using dynamic_cast so that you can compile Final Cut 
+	  without Run-Time Type Information (RTTI). 
+	  Thanks to user1095108 for reporting that.
+
 2018-10-11  Markus Gans  <guru.mail@muenster.de>
 	* FKeyboard now uses references for keyboard buffer passing
 
